syntax = "proto3";

service EchoService {
    rpc SayItBack (stream EchoRequest) returns (stream EchoResponse);
    rpc SayItBackOnce(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}
